# moos-ivp-extend

./: BinLocation  Readme.md
interfaces/backend/mysite/: README.txt
interfaces/backend/mysite/api/: apiview.py  urls.py
interfaces/backend/mysite/json/: .json  shoreside.json
interfaces/backend/mysite/mysite/: settings.py  urls.py  views.py
interfaces/backend/mysite/mysite/html/: base.html
interfaces/backend/mysite/templates/: 404.html  500.html  About.html  CameraView.html  Dashboard.html  DashboardTable.html  ErrorJSON.html  VehicleCharacteristics.html  base.html  camera.html  index.html  info.html
interfaces/backend/mysite/templates/old/: _baseinicial.html  _content.html  _p1.html
interfaces/backend/mysite/webinterface/: boat.py  moos.py  urls.py  webinterfaceview.py
interfaces/frontend/BarcoMOOSApp/: .gitignore
interfaces/frontend/BarcoMOOSApp/BarcoMOOSApp/: Podfile
interfaces/frontend/BarcoMOOSApp/BarcoMOOSApp/BarcoMOOSApp/: AppDelegate.swift  ViewController.swift
interfaces/frontend/BarcoMOOSApp/BarcoMOOSApp/BarcoMOOSApp.xcodeproj/: project.pbxproj
interfaces/frontend/BarcoMOOSApp/BarcoMOOSApp/BarcoMOOSApp.xcworkspace/: contents.xcworkspacedata
interfaces/frontend/BarcoMOOSApp/BarcoMOOSApp/BarcoMOOSAppTests/: BarcoMOOSAppTests.swift
interfaces/frontend/BarcoMOOSApp/BarcoMOOSApp/BarcoMOOSAppUITests/: BarcoMOOSAppUITests.swift
jsontest/: alpha.json
missions/: .gitignore  README.txt  json.moos
missions/Mestrado/CollisionAvoidance/Real/KalmanReal/: .LastOpenedMOOSLogDirectory
missions/Mestrado/CollisionAvoidance/Simu/KalmanSimu/: .LastOpenedMOOSLogDirectory  ca.moos++
missions/Mestrado/CollisionAvoidance/Simu/NoKalmanSimu/: .LastOpenedMOOSLogDirectory
missions/Mestrado/EA253Imagens/: init.sh
missions/Mestrado/EA253Imagens/ImageTransmission/: transmission.moos
missions/Mestrado/EA253Imagens/TransmissaoImagem/: xrelay_apples.moos  xrelay_pears.moos
missions/Mestrado/EA253Imagens/imageXRelay/: xrelay.moos
missions/Mestrado/Waypoints/Real/NoKalman/: .LastOpenedMOOSLogDirectory
missions/RPi/CollisionAvoidance/RPi/: rpi.moos
missions/RPi/CollisionAvoidance/Shoreside/: shoreside.moos
missions/RPi/Waypoints/RPi/: .LastOpenedMOOSLogDirectory  alpha.moos  rpi.moos  simurpi.moos  simurpi.moos++
missions/RPi/Waypoints/RPi/MOOSLog_19_10_2015_____15_40_12/: MOOSLog_19_10_2015_____15_40_12._moos  alpha._bhv
missions/RPi/Waypoints/RPi/MOOSLog_19_10_2015_____15_51_15/: MOOSLog_19_10_2015_____15_51_15._moos
missions/RPi/Waypoints/RPi/MOOSLog_19_10_2015_____15_53_49/: MOOSLog_19_10_2015_____15_53_49._moos
missions/RPi/Waypoints/RPi/MOOSLog_19_10_2015_____15_54_33/: MOOSLog_19_10_2015_____15_54_33._moos
missions/RPi/Waypoints/RPi/MOOSLog_19_10_2015_____15_56_28/: MOOSLog_19_10_2015_____15_56_28._moos
missions/RPi/Waypoints/RPi/MOOSLog_19_10_2015_____15_57_31/: MOOSLog_19_10_2015_____15_57_31._moos
missions/RPi/Waypoints/RPi/MOOSLog_19_10_2015_____15_58_00/: MOOSLog_19_10_2015_____15_58_00._moos
missions/RPi/Waypoints/Shoreside/: .LastOpenedMOOSLogDirectory  shoreside.moos
missions/RPi/___testes/RPi/: alpha.bhv  simurpi.moos
scripts/: abortmission.sh  shutdown.sh  startmission.sh
src/: .gitignore  CMakeLists.txt
src/iSerial/: CMakeLists.txt  Serial.cpp  Serial.h  SerialPort.cpp  SerialPort.h  Serial_Info.cpp  Serial_Info.h
src/iSerial/__SerialMacFuncionando/: CMakeLists.txt  Definitions.h  README.md  Serial.cpp  SerialPort.cpp  SerialPort.h  main.cpp
src/iToApacheJSON/: CMakeLists.txt  ToApacheJSON.cpp  ToApacheJSON.h  ToApacheJSON_Info.cpp  ToApacheJSON_Info.h  iToApacheJSON.moos  main.cpp
src/lib_behaviors-test/: BHV_Pulse.cpp  BHV_Pulse.h  CMakeLists.txt
src/pControleBarco/: CMakeLists.txt  ControleBarco.cpp  ControleBarco.h  ControleBarcoMain.cpp  README.md  pControleBarco.moos
src/pGeodesy/: CMakeLists.txt  Geodesy.cpp  Geodesy.h  Geodesy_Info.cpp  Geodesy_Info.h  README.md  main.cpp  pGeodesy.moos
src/pImageDisplayProcess/: CMakeLists.txt  ImageDisplayProcess.cpp  ImageDisplayProcess.h  ImageDisplayProcess_Info.cpp  ImageDisplayProcess_Info.h  main.cpp  pImageDisplayProcess.moos
src/pImageTransmitt/: CMakeLists.txt  ImageTransmitt.cpp  ImageTransmitt.h  ImageTransmitt_Info.cpp  ImageTransmitt_Info.h  main.cpp  pImageTransmitt.moos
src/pImageXRelay/: CMakeLists.txt  ImageXRelay.cpp  ImageXRelay.h  ImageXRelay_Info.cpp  ImageXRelay_Info.h  README.md  main.cpp  pImageXRelay.moos
src/pImageXRelayDisplay/: CMakeLists.txt  ImageXRelayDisplay.cpp  ImageXRelayDisplay.h  ImageXRelayDisplay_Info.cpp  ImageXRelayDisplay_Info.h  main.cpp  pImageXRelayDisplay.moos
src/pKalmanSensorFusion/: CMakeLists.txt  KalmanSensorFusion.cpp  KalmanSensorFusion.h  KalmanSensorFusion_Info.cpp  KalmanSensorFusion_Info.h  filtro anterior.txt  main.cpp  pKalmanSensorFusion.moos
src/pManual/: CMakeLists.txt  Manual.cpp  Manual.h  Manual_Info.cpp  Manual_Info.h  main.cpp  pManual.moos
src/pNavIMU/: CMakeLists.txt  NavIMU.cpp  NavIMU.h  NavIMU.moos  NavIMU_Info.cpp  NavIMU_Info.h  main.cpp
src/pmyGeodesy/: CMakeLists.txt  README.md  main.cpp  myGeodesy.cpp  myGeodesy.h  myGeodesy_Info.cpp  myGeodesy_Info.h  pmyGeodesy.moos
src/python-moos/: CMakeLists.txt  README.md
src/uBarcoDouglas/: BarcoDouglas.cpp  BarcoDouglas.h  BarcoDouglasMain.cpp  CMakeLists.txt  Model.cpp  Model.h
src/uBarcoSimu/: BarcoSimu.cpp  BarcoSimu.h  BarcoSimu_Info.cpp  BarcoSimu_Info.h  CMakeLists.txt  main.cpp  uBarcoSimu.moos
src/uBarcoSimu/___testes/: BarcoDouglas.cpp  Model.cpp  Model.h  README.md  uBarcoDouglas.moos
src/uBarcoSimu2Kalman/: BarcoSimu2Kalman.cpp  BarcoSimu2Kalman.h  BarcoSimu2Kalman_Info.cpp  BarcoSimu2Kalman_Info.h  CMakeLists.txt  main.cpp  uBarcoSimu2Kalman.moos
src/uBarcoSimu3Kalman/: BarcoSimu3Kalman.cpp  BarcoSimu3Kalman.h  BarcoSimu3Kalman_Info.cpp  BarcoSimu3Kalman_Info.h  CMakeLists.txt  main.cpp  uBarcoSimu3Kalman.moos
src/uKalmanVisual/: CMakeLists.txt  KalmanVisual.cpp  KalmanVisual.h  KalmanVisual_Info.cpp  KalmanVisual_Info.h  main.cpp  uKalmanVisual.moos  uKalmanVisualGUI.py
(+166 files in other folders)
